applications/openlookeng-tryme-test/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: openlookeng-tryme-test
  name: openlookeng-tryme-test
