applications/openlookeng-tryme-test/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    cert-manager.io/cluster-issuer: letsencrypt-issuer
  name: openlookeng-tryme-test-ingress
spec:
  tls:
    - hosts:
        - test.tryme.openlookeng.io
      secretName: openlookeng-tryme-test-tls
  rules:
    - host: test.tryme.openlookeng.io
      http:
        paths:
          - backend:
              serviceName: openlookeng-tryme-test-internal
              servicePort: 80
            path: /
